fixed input number_of_guests size ON mobile version

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -274,4 +274,8 @@ margin-top: 5px;
   width:90%;
 }
 
+#number_of_guests{
+  width: 72px; 
+}
+
 }
